--- a/Carousel.html
+++ b/Carousel.html
@@ -1,133 +1,167 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="atom-md.png">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="icon" href="atom-md.png">
 
-    <title>Mumupédia</title>
+	<title>Mumupédia</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap theme -->
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+	<!-- Bootstrap CSS -->
+	<link href="admin/Sites/css/bootstrap.css" rel="stylesheet">
+	<!-- Bootstrap theme -->
+	<link href="admin/Sites/css/bootstrap-theme.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="theme.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-   
+	<!-- Custom styles for this template -->
+	<link href="admin/Sites/theme.css" rel="stylesheet">
+	<link href="admin/Sites/css/styles.css" rel="stylesheet">
 
 
-  
+
+
 </head>
- <body role="document">
-    <!--===================================Fixed navbar===========================-->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+<body role="document">
+	<!--===================================Fixed navbar===========================-->
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 
-          <a class="navbar-brand" href="file:///Users/admin/Desktop/Carousel.html"><img src="atom-md.png">Mumupédia</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="file:///Users/admin/Desktop/Carousel.html">Home</a></li>
-            <li><a href="file:///Users/admin/Desktop/Contact.html">Contact</a></li>
-            <li class="dropdown"><a href="#articles" class="dropdown-toggle" data-toggle="dropdown">Articles <span class="badge">3</span></a></li><span class="caret"></span></a>
-           <ul class="dropdown-menu" role="menu">
-            <li class="active" role="presentation"><a role="menuitem" tabindex="-1" href="#"><b>Production</b></a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Conservation</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Utilisation</a></li>
-            <li role="presentation" class="divider"></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Voir aussi</a></li>
-           </ul>
-          </ul>
-        </div>
-      </div>
-    </div>
-      <!--================================ Carousel ================================-->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-                       <!-- Slides -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="test-molecule.jpg" class="img-responsive" alt="First slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Production</h1>
-          <p>Un domaine à développer</p>
-           <pthis is="" an="" example="" layout="" with="" carousel="" that="" uses="" the="" bootstrap="" 3="" styles.<="" small=""><p></p></pthis>
-          <p><a class="btn btn-lg btn-primary" href="http://article/production" role="bouton">En savoir plus</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="item">
-    <img src="bouteilles h46198.jpg" class="img-responsive" alt="Second slide">
-    <div class="container">
-      <div class="carousel-caption">
-          <h1>Conservation</h1>
-          <p>Trois methodes utilisants les trois états de la matiére.</p>
-          <p><a class="btn btn-lg btn-primary" href="http://article/conservation" role="bouton">En savoir plus</a></p>
-      </div>
-    </div>
-  </div>
-  <div class="item">
-      <img src="nasa.atlantis.zoom.jpg" class="img-responsive" alt="Third slide">
-    <div class="container">
-      <div class="carousel-caption">
-          <h1>Utilisation</h1>
-          <p>L'hydrogéne est present dans de nombreux domaines.</p>
-          <p><a class="btn btn-large btn-primary" href="http://article/utilisation" role="bouton">En savoir plus</a></p>
-      </div>
-    </div>
-  </div>
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="icon-prev"></span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="icon-next"></span>
-  </a>  
-</div>             
-            
-  
-  <!--=================================================HEADER=======================================-->
+				<a class="navbar-brand" href="Carousel.html"><img src="atom-md.png">Mumupédia</a>
+			</div>
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="Carousel.html">Home</a></li>
+					<li ><a href="Experiences.html">Experiences<span class="badge">2</span></a></li>
+
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Articles <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+						    <li><a href="#">L'hydrogéne</a></li>
+							<li class="divider"></li>
+							<li><a href="#">Production</a></li>
+							<li><a href="#">Conservation</a></li>
+							<li><a href="#">Utilisation</a></li>
+						</ul>
+					</li>
+<!--
+					<li class="dropdown" class="active">
+						<a href="Articles.html" >Articles <span class="badge">3</span></a>
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li class="active" role="presentation"><a role="menuitem" tabindex="-1" href="#"><b>Production</b></a></li>
+							<li role="presentation"><a role="menuitem" tabindex="-1" href="#lienConservatiob">Conservation</a></li>
+							<li role="presentation"><a role="menuitem" tabindex="-1" href="#lienutilisation">Utilisation</a></li>
+							<li role="presentation" class="divider"></li>
+							<li role="presentation"><a role="menuitem" tabindex="-1" href="lienAnnexe">Voir aussi</a></li>
+						</ul>
+					</li>
+-->
+				</ul>
+			</div>
+		</div>
+	</div>
 
 
-  <div class="container marketing">
-      <div class="row">
-        <div class="col-lg-4">
-          <img class="img-circle" src="test-molecule.jpg" style="width: 200px; height: 200px;" href="#">
-          <h2>L'hydrogéne</h2>
-          <p> L'hydrogéne c'est bien.<br>
-          C'est même tres tres bien.</p>
-          <p><a class="btn btn-default" href="#" role="button">View Détails &raquo;</a></p>
-        </div>        
-        
-        <div class="col-lg-4">
-        </div>
+	<!--================================ Carousel ================================-->
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<!-- Slides -->
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+			<li data-target="#myCarousel" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="item active">
+				<img src="test-molecule.jpg" class="img-responsive" alt="First slide">
+				<div class="container">
+					<div class="carousel-caption">
+						<h1>Production</h1>
+						<p>Un domaine à développer</p>
+						<pthis is="" an="" example="" layout="" with="" carousel="" that="" uses="" the="" bootstrap="" 3="" styles.<="" small=""><p></p></pthis>
+						<p><a class="btn btn-lg btn-primary" href="#toto" role="bouton">En savoir plus</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<img src="bouteilles h46198.jpg" class="img-responsive" alt="Second slide">
+			<div class="container">
+				<div class="carousel-caption">
+					<h1>Conservation</h1>
+					<p>Trois methodes utilisants les trois états de la matiére.</p>
+					<p><a class="btn btn-lg btn-primary" href="http://Sites/article/conservation" role="bouton">En savoir plus</a></p>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<img src="nasa.atlantis.zoom.jpg" class="img-responsive" alt="Third slide">
+			<div class="container">
+				<div class="carousel-caption">
+					<h1>Utilisation</h1>
+					<p>L'hydrogéne est present dans de nombreux domaines.</p>
+					<p><a class="btn btn-large btn-primary" href="http://Sites/article/utilisation" role="bouton">En savoir plus</a></p>
+				</div>
+			</div>
+		</div>
+		<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+			<span class="icon-prev"></span>
+		</a>
+		<a class="right carousel-control" href="#myCarousel" data-slide="next">
+			<span class="icon-next"></span>
+		</a>  
+	</div>             
 
-        <div class="col-lg-4">
-          <img class="img-circle" src="barage.jpg" style="width: 200px; height: 200px;" href="#" >
-          <h2>Les barrages hydroélectrique</h2>
-          <p>Les Barrages sont pas mal non plus
-          <br>Vraiment pas mal.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-  </div>
- <!--TODO: remplacer "#" par la page du théme en question-->
- <!--===========================Script==========================-->
-    <script src="js/bootstrap.js"></script>
+
+	<!--=================================================HEADER=======================================-->
+
+	<a name="toto"></a>
+	<div class="container marketing">
+		<div class="row">
+			<div class="col-lg-4">
+				<img class="img-circle" src="test-molecule.jpg" style="width: 200px; height: 200px;" href="Articles.html">
+				<h2>L'hydrogéne</h2>
+				<p> L'hydrogéne c'est bien.<br>
+					C'est même tres tres bien.</p>
+					<p><a class="btn btn-default" href="file:///Users/admin/Sites/Articles.html" role="button">View Détails &raquo;</a></p>
+			</div>        
+
+			<div class="col-lg-4">L'energie propre, c'est bien
+			</div>
+
+			<div class="col-lg-4">
+				<img class="img-circle" src="barage.jpg" style="width: 200px; height: 200px;" href="Experiences.html" >
+				<h2>Les barrages hydroélectrique</h2>
+				<p>
+					Les Barrages sont pas mal non plus<br>
+					Vraiment pas mal.
+				</p>
+				<p><a class="btn btn-default" href="file:///Users/admin/Sites/Experiences.html" role="button">View details &raquo;</a></p>
+			</div>
+		</div>
+	</div>
+
+	<!--===========================Script==========================-->
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="js/bootstrap.js"></script>
+
+
+
+
+
+
+
+</body></script></script></body></html>
+
+
+
+
+
