--- a/Experiences.html
+++ b/Experiences.html
@@ -6,18 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="atom-md.png">
+    <link rel="icon" href="images/atom-md.png">
 
     <title>Mumupédia</title>
 
     <!-- Bootstrap CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/theme.css" rel="stylesheet">
-    <link href="/ccs/styles.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    
+    <!--===========================Script==========================-->
+  <script src="http:code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="js/bootstrap.js"></script>
    
 
 
@@ -25,35 +29,37 @@
 </head>
  <body role="document">
     <!--===================================Fixed navbar===========================-->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
-          <a class="navbar-brand" href="Carousel.html"><img src="atom-md.png">Mumupédia</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="Carousel.html">Home</a></li>
-            <li class="active"><a href="Experiences.html">Experiences<span class="badge">2</span></a></li>
-             <li class="dropdown" class="active"><a href="Articles.html" class="dropdown-toggle" data-toggle="dropdown">Articles <span class="badge">3</span></a></li><span class="caret"></span></a>
-           <ul class="dropdown-menu" role="menu">
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><b>Production</b></a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Conservation</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Utilisation</a></li>
-            <li role="presentation" class="divider"></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Voir aussi</a></li>
-           </ul>
-          </ul>
-        </div>
+        <a class="navbar-brand" href="Carousel.html"><img src="images/atom-md.png">Mumupédia</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li ><a href="Carousel.html">Home</a></li>
+          <li class="active"><a href="Experiences.html">Experiences<span class="badge">2</span></a></li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Articles <span class="badge">3</span><span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="Articles.html">L'hydrogéne</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Production</a></li>
+              <li><a href="#">Conservation</a></li>
+              <li><a href="#">Utilisation</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
-
+  </div>
 
 
 
