--- a/images/Mumupédia.html
+++ b/images/Mumupédia.html
@@ -45,7 +45,7 @@
 					<li ><a href="Experiences.html">Experiences<span class="badge">2</span></a></li>
 
 					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown">Articles <span class="badge"><img src="images/atom-md.png"> </span><span class="caret"></span></a>
+						<a class="dropdown-toggle" data-toggle="dropdown">Articles <span class="badge">3</span><span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 						    <li><a class="btn btn-default" href="Articles.html">Tous</a></li>
 						    <li><a href="Articles.html#Hydro">L'hydrogéne</a></li>
@@ -63,13 +63,12 @@
 
 	<!--================================ Carousel ================================-->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
-		<!-- Slides 
+		<!-- Slides -->
 		<ol class="carousel-indicators">
 			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 			<li data-target="#myCarousel" data-slide-to="1"></li>
 			<li data-target="#myCarousel" data-slide-to="2"></li>
-			<li data-target="#myCarousel" data-slide-to="3"></li>
-		</ol>-->
+		</ol>
 	<div class="carousel-inner">
 		<div class="item active">
 				<img src="images/test-molecule.jpg" class="img-responsive" alt="First slide">
@@ -107,7 +106,7 @@
 			<div class="container">
 			  <div class="carousel-caption">
 			  	<h1>Les barrages hydroélectriques</h1>
-				<p>Les experiences liées au barrages</p>
+				<p>Les experiences liées au barrges</p>
 				<p><a class="btn btn-large btn-primary" href="Experiences" role="bouton">En savoir plus</a></p>
 			  </div>	
 			</div>
@@ -131,8 +130,7 @@
 				<img class="img-circle" src="images/test-molecule.jpg" style="width: 300px; height: 300px;" href="Articles.html">
 				<h2>L'hydrogéne</h2>
 				<p> L'hydrogéne c'est bien.<br>
-					C'est même tres tres bien.
-				</p>
+					C'est même tres tres bien.</p>
 					<p><a class="btn btn-default" href="Articles.html" role="button">En savoir plus &raquo;</a></p>
 			</div>        
 
