--- a/Experiences.html
+++ b/Experiences.html
@@ -38,33 +38,75 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-
         <a class="navbar-brand" href="Carousel.html"><img src="images/atom-md.png">Mumupédia</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li ><a href="Carousel.html">Home</a></li>
+          <li><a href="Carousel.html">Home</a></li>
           <li class="active"><a href="Experiences.html">Experiences<span class="badge">2</span></a></li>
-
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Articles <span class="badge">3</span><span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown">Articles <span class="badge">3</span><span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="Articles.html">L'hydrogéne</a></li>
+              <li><a class="btn btn-default" href="Articles.html">Tous</a></li>
+              <li><a href="Articles.html#Hydro">L'hydrogéne</a></li>
               <li class="divider"></li>
-              <li><a href="#">Production</a></li>
-              <li><a href="#">Conservation</a></li>
-              <li><a href="#">Utilisation</a></li>
+              <li><a href="Articles.html#Prod">Production</a></li>
+              <li><a href="Articles.html#cons">Conservation</a></li>
+              <li><a href="Articles.html#use">Utilisation</a></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
   </div>
+  <a name="Debut"></a>
+<!--===============intro barrage========-->
+<div class="container">
+  <div class="start-template">
+    <h1 align="left">Les barrages hydroélectriques</h1>
+    <p class="lead">L’hydroélectricité est une source d’énergie renouvelable, c’est-à-dire qui ne consomme pas de ressource à échelle humaine, cela représente 16,3% de la production électrique dans le monde ce  qui n’est donc pas négligable. Les avantage de cette source d’énergie sont : le faible coût de production, le peu d’émission de CO2 et la possibilité de stocker et de délivrer de l’électricité à volonté    <br><br>
+      <img src="images/Barrage_schema" align="right">
+      <i>Une centrale hydroélectrique est composeé essentiellement de :</i><br>
+      <align="left"> 
+      <li> une vanne de contrôle : permet de laisser plus ou moins écouler l’eau un conduit : guide l’eau vers la turbine</li>
+      <li>une turbine hydraulique : dispositif qui utilise l’énergie cinétique de l’eau (vitesse d’écoulement) pour faire tourner ses palles dans le but de convertir celle-ci en énergie mécanique</li>
+      <li>un alternateur : machine constituée d’un stator (partie fixe) et d’un stator (partie tournante) le mouvement de celui-ci autour du stator produit un champ magnétique et ainsi une tension électrique (phénomène d’induction électromagnétique)</li>
+      <li>un transformateur : machine permettant d’élever une tension Le tout est relié au réeau électrique.</li></align="left">
+    </p>
+  </div>
+</div>
+<h4 align="center"><br> Les barrages hydroélectriques se basent sur les principes de l’hydroélectricité :</h4>
+<p align="center"><br>l’énergie cinétique de l’eau dût à sa chute et transformée en energie mécanique grâce à une turbine reliée à un alternateur qui va transformer celle-ci en energie électrique.</p>
+<p align="center"><img src="images/Chaine energe.png" align="center"></p>
+<p align="center" ><i>Nous nous sommes demandé qu’elles étaient les paramétres à faire varier pour obtenir une production en puissance électrique maximal, puis nous avons décidé de nous intéresser plus particuliérement aux paramétres liés au conduit.
+<br> Nous allons donc étudier dans un premier temps la hauteur de chute de l’eau, le débité laquelle l’eau est lâchée et la hauteur d’eau dans le réservoir puis à d’autres paramétres que nous n’avons pas expérimenté mais qui reste indispensable à une telle installation.</i></p>
+<!--=======================premiere experience=====================-->
+<div class="container">
+  <div class="start-template">
+    <h1 align="left">La hauteur de chute de le l'eau</h1>
+    <p>
+      La hauteur de chute de l’eau est un élément important dans une centrale, en effet, on peut classer les centrales en trois types de classement :<br>
+1. Les hautes chutes (supérieur à 200 mètres)<br>
+2. Les chutes moyennes (entre 50 et 200 mètres)<br>
+3. Les chutes basses (50 mètres)<br>
+La hauteur de chute permet de déterminer la turbine la plus adaptés aux conditions de la central avec les meilleurs rendements, par exemple :<br>
+La turbine Pelton pour les hautes chutes (avec un rendement de 90%)<br>
+La turbine Francis pour les chutes moyennes (avec un rendement entre 80 et 95%) La turbine Kaplan pour les chutes basses (avec un rendement de 90% à 95%)<br>
+Ce qui différentie ces différentes turbines, c’est leurs diamètres, vitesses de rotation et la forme des palles.<br>
+En théorie, plus la hauteur de chute de l’eau est importante, plus la puissance produite est importante. Nous avons voulu vérifier expérimentalement cette affirmation, pour cela, nous avons reproduit le fonctionnement d’une centrale hydroélectrique à notre échelle.<br>
+Pour ce faire nous avons utilisé une cuve avec un indicateur de niveau pouvant contenir environs 64cm d’eau, pour l’entrée de l’eau , nous avons assemblé deux tuyau entre eux afin de pouvoir augmenter plus ou moins la hauteur sans être gêné, en ce qui concerne la sortie d’eau on a fabriqué un « squelette » en forme d’angle droit pour notre tuyau qui était flexible afin que l’eau puisse arriver verticalement par rapport à la turbine.<br>
+Comme nous l’avons dit précédemment, notre objectif est de voir la variation de production de puissance électrique en fonction de la hauteur de la chute d’eau, nous avons donc eu à faire deux types de mesures :<br>
+la première est la hauteur en la sortie de l’eau du conduit et le point d’impact avec la première palle de la turbine nous réalisons cette mesure à l’aide d’un mètre ruban.<br>
+La deuxième mesure est celle de la puissance, à nos débuts, nous utilisions un wattmètre, cependant celui-ci n’était pas assez précis, nous avons donc décidé de mettre en œuvre la relation P=U*I (où P est la puissance en W, U est la tension en V et
+￼￼￼
+I est l’intensité en A) pour cela il était donc indispensable de mesurer la tension à
+l’aide d’un voltmètre et l’intensité à l’aide d’un ampèremètre.
+    </p>
+  </div>
+</div>
 
 
-
-
-
-
+<!--=====================Footer=====================-->
+<footer><p align="center"><img src="images/Esstin1.png"> <img src="images/facebook-icon.png"><img src="images/twitter_newbird_blue.png"> <a href="Experiences.html#Debut"> Revenir en haut</a></p></footer>
       
-    </body></html>
+</body></html>
